--- a/prototipo1Codesign/presentation.css
+++ b/prototipo1Codesign/presentation.css
@@ -19,7 +19,6 @@ body{
   }
 
 button{
-    display: inline-block;
     height: 134px;
     padding: 0;
     margin: 0;
@@ -28,21 +27,24 @@ button{
     background: none;
     border: none;
 }
-#coruja, #coruja img{
-    display: block;
+.top #coruja, #coruja img{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 4;
 
-    height: 20%;
-    width: 20%;
-    margin-left: 25%;
+    height: 4rem;
+    width: 4rem;
     
 }
 
 
-.front{
-    display: block;
-}
 
 .top{
+    display: grid;
+    
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4,1fr)
 }
 
 #sapo img, #sapo{
