--- a/prototipo1Codesign/presentation.css
+++ b/prototipo1Codesign/presentation.css
@@ -23,7 +23,8 @@ html{
     --grey-medium: #eaecf2;
 
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
-    font-size: 62.5% /* 10px */
+    font-size: 62.5%; /* 10px */
+    scroll-behavior: smooth;
 
 }
 
@@ -32,7 +33,11 @@ body{
     background-image: url(source/fundo_vertical.png);
     background-size: cover;
     background-repeat: no-repeat;
+    
+
 }
+
+
 
 
 
