tentativas de deixar o fundo responsivo

--- a/prototipo1Codesign/presentation.css
+++ b/prototipo1Codesign/presentation.css
@@ -29,32 +29,51 @@ html{
 }
 
 body{
-    height: 12000px;
-    background-image: url(source/fundo_vertical.png);
-    background-size: cover;
+   
+    /*background-image: url(source/fundo_vertical.png);
+    background-size: contain 100%;
     background-repeat: no-repeat;
+    background-position: 0 0;*/
+    
     
 
 }
 
+.container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 130rem);
+    width: 100%;
+    margin: 0 auto;
+}
 
-
+.fundo{
+    grid-column: 1 / 6;
+}
 
 
 .balao {
+    grid-column: 2/-1;
+    overflow: hidden;
     background-color: #f2f2f2;
     border-radius: 10px;
     padding: 2rem;
     max-width: 40rem;
+    height: 18rem;
 
-    margin-left: 52%;
-    margin-top: 30%;
+    margin-left: 50%;
   }
   
 .balao p {
+    position: absolute;
+    overflow: hidden;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 6rem;
+}
+
+.fundo, .balao{
+    grid-row: 1/2;
 }
 
 
