--- a/prototipo1Codesign/presentation.css
+++ b/prototipo1Codesign/presentation.css
@@ -28,7 +28,8 @@ html{
 
 
 }
-
+/*1920px = 98vw
+SEMPRE USAR VW, usando calc de regra de 3*/
 body{
     background-image: url(source/fundo_verticall.png);
     background-size: cover;
@@ -47,14 +48,39 @@ body{
     grid-template-rows: repeat(32, 1fr);
 }
 
+#cachorro{
+    grid-column-start: 7;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    
+}
+
+#cachorro img{
+    min-width: 22.1vw;
+    max-width: 22.1vw;
+    margin-top: 8.22vw;
+    margin-left: 1.17vw;
+}
+
 /*alinhar elemento no centro da celula
 align-items: center;*/
 
+#balao{
+    grid-column-start: 6;
+    grid-column-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    align-items: center;
 
-
-
-
-.balao {
-    background-color: #f2f2f2;
-    border-radius: 10px;
 }
+
+#balao > img{
+    margin-top: -3vw;
+    margin-left: 3vw;
+    width: 21vw;
+}
+
+
+
+
