--- a/prototipo1Codesign/styletrilhas.css
+++ b/prototipo1Codesign/styletrilhas.css
@@ -18,16 +18,28 @@ html{
 /*1920px = 98vw
 SEMPRE USAR VW, usando calc de regra de 3*/
 body{
-    background-image: url("https://i.imgur.com/LY3vR2n.png");
+    background-image: url("source/bgtrilhas.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.gridtrilhas{
+    min-width: 98vw;
+    height: 55.13vw;
+    max-height: 55.13vw;
+    
+
+    display: grid;
+    grid-template-columns: repeat(12, 8.22vw);
+    grid-template-rows:repeat(5, 1fr);
+}
+
 #corujatrilhas{
     grid-column-start: 8;
     grid-column-end: 10;
     grid-row-start: 1;
     grid-row-end: 4;
-    margin-top: 12vw;
+    margin-top: 11vw;
     margin-left: 1.17vw; 
 }
 #corujatrilhas > img{
@@ -36,30 +48,21 @@ body{
     
 }
 #balaotrilhas{
-    grid-column-start: 5;
-    grid-column-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 7;
     grid-row-start: 2;
-    grid-row-end: 2;
-    align-items: center;
-    margin-top: -3vw;
-    margin-left: 3.8vw;
-    height: 12.5vw;
+    grid-row-end: 5;
+    margin-top: 2.35vw;
+    margin-left: 3.62vw;
+    width: 38.69vw;
+}
+
+#balaotrilhas > img{
+    width: 38.69vw;
 }
 #balaotrilhas > h1{
-    align-items: center;
-    grid-column-start: 3;
-    grid-column-end: 6;
-    grid-row-start: 2;
-    grid-row-end: 2;
     margin-left: 3.8vw;
 }
 #balaotrilhas > p{
 
-}
-.gridtrilhas{
-    min-width: 98vw;
-
-    display: grid;
-    grid-template-columns: repeat(12, 8.22vw);
-    grid-template-rows:repeat(3, 1fr);
 }
