--- a/prototipo1Codesign/styletrilhas.css
+++ b/prototipo1Codesign/styletrilhas.css
@@ -8,7 +8,7 @@
 }
 html{
     --grey: #636363;
-
+    --lightgrey: #9c9c9c;
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
     font-size: 62.5%; /* 10px */
     scroll-behavior: smooth;
@@ -21,6 +21,7 @@ body{
     background-image: url("source/bgtrilhas.png");
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: var(--lightgrey);
 }
 
 .gridtrilhas{
