--- a/prototipo1Codesign/styletrilhas.css
+++ b/prototipo1Codesign/styletrilhas.css
@@ -18,10 +18,11 @@ html{
 /*1920px = 98vw
 SEMPRE USAR VW, usando calc de regra de 3*/
 body{
-    background-image: url("source/bgtrilhas.png");
+    background-color: var(--lightgrey);
+    background-image: url(source/bgtrilhas.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: var(--lightgrey);
+    
 }
 
 .gridtrilhas{
