corrigindo seletores dos animais

--- a/prototipo1Codesign/styles/presentation.css
+++ b/prototipo1Codesign/styles/presentation.css
@@ -174,7 +174,7 @@ align-items: center;*/
     margin-top: 4.8vw;
 }
 
-#cachorrocol8row33 > img{
+#botaoprojetos > img{
     width: 5.61vw;
 }
 
@@ -186,6 +186,6 @@ align-items: center;*/
     width: 6.28vw;
 }
 
-#sapocol10row31 > img{
+#botaoegressos > img{
     width: 6.28vw;
 }
