--- a/prototipo1Codesign/styles/projetos.css
+++ b/prototipo1Codesign/styles/projetos.css
@@ -23,15 +23,9 @@ body{
     width: 7.04vw;
     height: 16.74vw;
     background-color: transparent;
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    margin-left: 1vw;
-    margin-top: 1vw;
 }
 
-.return > img{
+#botaovoltar > img{
     width: 4.08vw;
     margin-left: 2.71vw;
     margin-top: 3.06vw
