--- a/prototipo1Codesign/styles/presentation.css
+++ b/prototipo1Codesign/styles/presentation.css
@@ -174,6 +174,11 @@ align-items: center;*/
     margin-top: 4.8vw;
 }
 
+#botaoprojetos{
+    width: 5.61vw;
+    height: 7.66vw;    
+}
+
 #botaoprojetos > img{
     width: 5.61vw;
 }
@@ -184,8 +189,15 @@ align-items: center;*/
     margin-left: 2.5vw;
     margin-top: 1.8vw;
     width: 6.28vw;
+    height: 10.67vw;
+}
+
+#botaoegressos{
+    width: 6.28vw;
+    height: 10.67vw;
 }
 
 #botaoegressos > img{
     width: 6.28vw;
+    height: 10.67vw;
 }
