adicionando texto no balao de projetos

--- a/prototipo1Codesign/styles/projetos.css
+++ b/prototipo1Codesign/styles/projetos.css
@@ -61,6 +61,14 @@ body{
     height: 6.79vw;
 }
 
+#balaoprojetos > p{
+    font-size: 1.33vw;
+    width: 29.14vw;
+    height: 3.22vw;
+    margin-top: -5.4vw;
+    margin-left: 1.84vw;
+}
+
 
 
 .bloco1{
