--- a/prototipo1Codesign/views/graduates.html
+++ b/prototipo1Codesign/views/graduates.html
@@ -8,8 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Rubik:wght@500&family=Staatliches&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/graduates-style.css">
   <script src="../script.js" defer></script>
@@ -30,4 +33,20 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <h1>EGRESSOS</h1>
+    <div id="character-content">
+      <div class="balloon">
+        <p>Aqui você pode dar uma olhadinha onde os talentos de SMD estão pelo mundo a fora!</p>
+      </div>
+      <div class="triangle"></div>
+      <div id="img-frog">
+        <img src="../images/frog-icon.png">
+      </div>
+    </div>
+    <div class="main-content">
+      <div class="map-content"><img src="../images/map.png" alt="mapa"></div>
+      <div class="location-content"><img src="../images/location_icon.png" alt="localização"></div>
+    </div>
+  </main>
 </body>
