--- a/prototipo1Codesign/views/project-item.html
+++ b/prototipo1Codesign/views/project-item.html
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&family=Staatliches&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Rubik:wght@500&family=Staatliches&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/project-item.css">
   <script type="module" src="../scripts/project-item.js" defer></script>
@@ -38,23 +41,24 @@
     <h1 id="title"></h1>
     <div id="project-details">
       <p id="description"></p>
-      <div>
+      <div class="desc-items">
         <h3>Objetivo</h3>
         <p id="objective"></p>
       </div>
-      <div>
+      <div class="desc-items">
         <h4>Realizado em:</h4>
         <p id="held-in"></p>
       </div>
-      <div>
+      <div class="desc-items">
         <h4>Participantes:</h4>
         <p id="participants"></p>
       </div>
-      <div>
+      <div class="desc-items">
         <h4>Acesso em:</h4>
         <a id="acess"></a>
       </div>
     </div>
   </main>
 </body>
+
 </html>
