--- a/prototipo1Codesign/views/projects.html
+++ b/prototipo1Codesign/views/projects.html
@@ -8,14 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&family=Staatliches&display=swap"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Rubik:wght@500&family=Staatliches&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/projects.css">
     <script type="module" src="../scripts/projects.js" defer></script>
-  <script src="../scripts/data.js" defer></script>
-  <script src="../script.js" defer></script>
+    <script src="../scripts/data.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 
 <body>
@@ -42,7 +44,7 @@
             <div class="triangle"></div>
 
             <div id="img-dog">
-                <img src="../source/cachorroprojetos.png">
+                <img src="../images/dog-icon.png">
             </div>
         </div>
         <ul id="menu">
