--- a/prototipo1Codesign/styles/project-item.css
+++ b/prototipo1Codesign/styles/project-item.css
@@ -1,38 +1,10 @@
-h3, h4, p, #acess {
-    font-family: 'montserrat', sans-serif;
-    text-align: left;
+main {
+    margin-left: 5vw;
+    width: 70vw;
 }
-
-h3, h1 {
-    text-align: center;
-}
-
-h1 {
-    margin: 0;
-    margin-top: 5.92vw;
-    font-family:'Rubik',sans-serif;
-    font-size: 3.38vw;
-}
-
-/* #projeto-details {
-    display: grid;
-    grid-template-columns: 37.5vw 50.31vw;
-    grid-column-gap: 3vw;
-    margin-top: 4.73vw;
-} */
-/* 
-.description-content {
-    width: 50.31vw;
-    height: 26.45vw;
-    padding: 1.25vw;
-    background-color: #E0E0E0;
-    border-radius: 1.25vw;
-} */
 
 #player {
     margin-top: 6.92vw;
-    margin-left: 5vw;
-    width: 70vw;
     height: 40.20vw;
     border-radius: 1.25vw;
     -moz-border-radius: 1.25vw;
@@ -43,7 +15,31 @@ h1 {
 iframe {
     width: 100%;
     height: 100%;
-    /* border-radius: 1.25vw;
-    -moz-border-radius: 1.25vw;
-    -webkit-border-radius: 1.25vw; */
+}
+
+h1 {
+    margin: 0;
+    margin-top: 5.92vw;
+    font-size: 3.38vw;
+}
+
+h3,
+h1 {
+    text-align: center;
+}
+
+h4,
+p,
+#acess {
+    text-align: left;
+}
+
+
+#description {
+    margin-top: 3vw;
+}
+
+.desc-items,
+#description {
+    margin-bottom: 4vw;
 }
