--- a/prototipo1Codesign/styles/projects.css
+++ b/prototipo1Codesign/styles/projects.css
@@ -1,6 +1,9 @@
+body {
+    background-color:#dddddd;
+}
+
 h1 {
     margin: 0;
-    font-family: 'Rubik', sans-serif;
     font-size: 4.42vw;
     font-weight: bold;
     margin-top: 2.96vw;
@@ -32,9 +35,8 @@ h1 {
 }
 
 .balloon> p {
-    padding: 0.5vw;
-    font-size: 1.35vw;
-    font-family: 'montserrat', sans-serif;
+    padding: 1.2vw;
+    font-size: 1.4vw;
 }
 
 #img-dog {
@@ -57,7 +59,6 @@ h1 {
     align-items: center;
     list-style: none;
     font-size: 1.3vw;
-    font-family: 'montserrat', sans-serif;
 }
 
 .item-menu {
@@ -65,6 +66,7 @@ h1 {
     text-align: center;
     margin-right: 1.66vw;
     width: 18.75vw;
+    font-family: 'Fredoka', sans-serif;
 }
 
 .item-menu:hover {
@@ -91,7 +93,7 @@ main {
 
 .card-project {
     width: 18.75vw;
-    height: 21.35vw;
+    height: 25vw;
     background-color: white;
     border-radius: 1.25vw;
 }
@@ -108,10 +110,16 @@ main {
 }
 
 #card-text {
-    font-family: 'montserrat', sans-serif;
     padding: 1vw;
 }
 
 #card-text h4 {
+    font-size:1.1vw;
     margin: 0;
+}
+
+#card-text p {
+    width: 100%;
+    height: 100%;
+    font-size: 1.1vw;
 }
