--- a/prototipo1Codesign/styles/style.css
+++ b/prototipo1Codesign/styles/style.css
@@ -1,6 +1,18 @@
+* {
+    margin: 0;
+}
+
 body {
     margin: auto;
     width: 80vw;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Rubik', sans-serif;
+}
+
+p, a {
+    font-family: 'Fredoka', sans-serif;
 }
 
 a {
@@ -43,10 +55,13 @@ a:visited {
     margin-left: 3.38vw;
     list-style: none;
     color: white;
-    font-family: 'Staatliches', cursive;
     font-size: larger;
     text-decoration: none;
     position: relative;
+}
+
+.global-menu-item a {
+    font-family: 'Staatliches', cursive;
 }
 
 .global-menu-item::after { /* bolinha */
