--- a/prototipo1Codesign/views/trails.html
+++ b/prototipo1Codesign/views/trails.html
@@ -8,8 +8,11 @@
   <title>Trilhas</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&family=Staatliches&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Rubik:wght@500&family=Staatliches&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../styles/styletrilhas.css">
   <link rel="stylesheet" href="../styles/style.css">
   <script src="../script.js"></script>
